--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   card_swiper: ^3.0.1
   get_it: ^8.0.3
   google_fonts: ^6.2.1
+  easy_localization: ^3.0.7+1
+  animated_toggle_switch: ^0.8.4
 
   #Assets
   image_picker: ^1.1.2
@@ -32,7 +34,7 @@ dependencies:
   flutter_svg: ^2.0.17
 
   #State Management
-  get: ^4.7.2
+  #get: ^4.7.2
   flutter_bloc: ^9.0.0
   flutter_staggered_grid_view: ^0.7.0
 
@@ -48,9 +50,11 @@ flutter:
   uses-material-design: true
 
   #------------------------LOCAL ASSETS-------------------#
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    - assets/translations/
+
+
   #------------------------LOCAL FONTS-------------------#
 
   # fonts:
