--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   easy_localization: ^3.0.7+1
   animated_toggle_switch: ^0.8.4
 
+  carousel_slider: ^5.0.0
+
   #Assets
   image_picker: ^1.1.2
   cupertino_icons: ^1.0.8
