--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
 
   #----------------------PACKAGES END-----------------#
   bloc: any
+  iconsax: ^0.0.8
 dev_dependencies:
   flutter_test:
     sdk: flutter
