--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,10 @@ dependencies:
   google_fonts: ^6.2.1
   easy_localization: ^3.0.7+1
   animated_toggle_switch: ^0.8.4
-
+  firebase_core: ^3.10.1
+  cloud_firestore: ^5.6.2
+  firebase_auth: ^5.4.1
+  google_sign_in: ^6.2.2
   carousel_slider: ^5.0.0
 
   #Assets
