--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,9 +12,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   #Utilitiy Packages
-
   dio: ^5.8.0+1
   dartz: ^0.10.1
   smooth_page_indicator: ^1.2.0+3
@@ -27,7 +25,7 @@ dependencies:
   google_fonts: ^6.2.1
   easy_localization: ^3.0.7+1
   animated_toggle_switch: ^0.8.4
-
+  url_launcher: ^6.3.1
   carousel_slider: ^5.0.0
 
   #Assets
