--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,9 @@ dependencies:
   animated_toggle_switch: ^0.8.4
   url_launcher: ^6.3.1
   carousel_slider: ^5.0.0
-
+  firebase_core: ^3.12.0
+  firebase_auth: ^5.5.0
+  google_sign_in: ^6.2.2
   #Assets
   image_picker: ^1.1.2
   cupertino_icons: ^1.0.8
